# water-bbs

./: .gitignore  README.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md
backend/: .env  Cargo.toml  makefile  rustfmt.toml
backend/application/: Cargo.toml
backend/application/auth/: code.rs  deactivate.rs
backend/application/auth/events/: cert_updated.rs
backend/application/auth/registor/: mail.rs
backend/application/src/: lib.rs
backend/application/src/auth/: code.rs  deactivate.rs  error.rs  login.rs  logout.rs  mod.rs  register.rs  reset_cert.rs  update_cert.rs  verify_ident.rs
backend/application/src/auth/events/: cert_updated.rs  mod.rs
backend/application/src/auth/registor/: mail.rs  mod.rs
backend/application/src/post/: list_post.rs  remove_post.rs  update_post.rs
backend/application/src/session/events/: user_session_expired.rs  user_session_revoked.rs
backend/application/src/tag/: create_tag.rs  get_tag_info.rs  get_tag_list.rs  mod.rs  remove_tag.rs  update_tag.rs
backend/cqrs/: Cargo.toml
backend/cqrs/src/: lib.rs
backend/cqrs/src/query/: fetch_profile.rs  mod.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs
backend/domain/src/ar/: account.rs  auth_session.rs  mod.rs  post.rs  tag.rs
backend/domain/src/config/: features.rs  loader.rs  mod.rs
backend/domain/src/error/: auth_session.rs  config.rs  handler.rs  mod.rs  repo.rs
backend/domain/src/error/ar/: post.rs  tag.rs
backend/domain/src/error/cqrs/: mod.rs
backend/domain/src/error/cqrs/query/: error.rs  mod.rs  profile.rs
backend/domain/src/error/service/: mod.rs  post.rs  tag.rs  token.rs
backend/domain/src/error/validate/: auth.rs  mod.rs
backend/domain/src/event/: auth.rs  mod.rs  session.rs  verification_code_sent_event.rs
backend/domain/src/repo/: account.rs  mod.rs  post.rs  session.rs  tag.rs  token.rs
backend/domain/src/service/: mailer.rs  mod.rs  token.rs  verify_code.rs
backend/domain/src/validator/: mod.rs
backend/domain/src/vo/: account_id.rs  comment_id.rs  mod.rs  post_id.rs  post_visible.rs  session.rs  tag_id.rs  thread_id.rs
backend/infra/: Cargo.toml
backend/infra/src/: error.rs
backend/infra/src/config/: mod.rs
backend/infra/src/config/policy/: redis_features.rs
backend/infra/src/entity/: account.rs  badge.rs  cert.rs  dictator.rs  identity.rs  mod.rs  post.rs  post_tag.rs  prelude.rs  profile.rs  proposal.rs  proposal_comment.rs  ruling.rs  shop_item.rs  tag.rs  thread.rs  thread_comment.rs  token.rs  user_badge.rs  user_inventory.rs  vote.rs
backend/infra/src/eventbus/: error.rs  in_memory_event_bus.rs  mod.rs
backend/infra/src/mailer/: smtp_mailer.rs
backend/infra/src/mapper/: account.rs  cert.rs  identity.rs  mod.rs  post.rs  profile.rs  tag.rs
backend/infra/src/notification/: dispatcher.rs
backend/infra/src/notification/sender/: mail_sender.rs
backend/infra/src/repo/: account.rs  mod.rs  post.rs  session.rs  tag.rs
backend/infra/src/token/: jwt.rs
backend/migration/: Cargo.toml
backend/migration/src/: m20220101_000001_create_table.rs
backend/shared/: Cargo.toml
backend/shared/src/random/: generator.rs
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/account/: deactivate.rs  error.rs  login.rs  mod.rs  register.rs
backend/src/application/account/registor/: mail.rs  mod.rs
backend/src/application/auth/: code.rs  deactivate.rs  error.rs  login.rs  logout.rs  mod.rs  register.rs  reset_cert.rs  update_cert.rs  verify_ident.rs
backend/src/application/auth/events/: cert_updated.rs
backend/src/application/auth/registor/: mail.rs  mod.rs
backend/src/application/session/events/: mod.rs  session_revoked.rs  user_session_expired.rs  user_session_revoked.rs
backend/src/domain/: mod.rs
backend/src/domain/ar/: account.rs  auth_session.rs  mod.rs
backend/src/domain/config/: features.rs  loader.rs  mod.rs
backend/src/domain/error/: auth_session.rs  config.rs  handler.rs  mod.rs  repo.rs
backend/src/domain/error/service/: token.rs
backend/src/domain/error/validate/: auth.rs  mod.rs
backend/src/domain/event/: auth.rs  mod.rs  session.rs  verification_code_sent_event.rs
backend/src/domain/repo/: account.rs  mod.rs  session.rs  token.rs
backend/src/domain/service/: mailer.rs  mod.rs  token.rs  verify_code.rs
backend/src/domain/validator/: mod.rs
backend/src/domain/vo/: account_id.rs  mod.rs  money.rs  profile.rs  session.rs
backend/src/infra/: error.rs  mod.rs
backend/src/infra/config/policy/: mod.rs  redis_features.rs
backend/src/infra/config/provider/: redis.rs
backend/src/infra/config_loader/: mod.rs  redis_loader.rs
backend/src/infra/entity/: account.rs  badge.rs  cert.rs  dictator.rs  identity.rs  mod.rs  post.rs  post_tag.rs  prelude.rs  profile.rs  proposal.rs  proposal_comment.rs  ruling.rs  shop_item.rs  tag.rs  thread.rs  thread_comment.rs  token.rs  user_badge.rs  user_inventory.rs  vote.rs
backend/src/infra/eventbus/: error.rs  in_memory_event_bus.rs  mod.rs
backend/src/infra/mailer/: smtp_mailer.rs
backend/src/infra/mapper/: account.rs  cert.rs  identity.rs  profile.rs
backend/src/infra/notification/: dispatcher.rs  mod.rs
backend/src/infra/notification/sender/: mail_sender.rs  mod.rs
backend/src/infra/repo/: account.rs  session.rs
backend/src/infra/token/: jwt.rs
backend/src/infra/verify_code/: mod.rs
backend/src/intf/http/: mod.rs  startup.rs
backend/src/intf/http/account/: mod.rs
backend/src/intf/http/account/error/: account_already_deactivated.rs  account_already_exists.rs  account_not_found.rs  mod.rs  require_verify_code.rs
backend/src/intf/http/account/handlers/: get_profile.rs  login.rs  mod.rs  register.rs  (+1 more)
backend/src/intf/http/auth/: mod.rs
backend/src/intf/http/ext/: current_account_id.rs  into_response.rs  is_bd.rs  mod.rs  role_check.rs  state.rs  validator_extract.rs
backend/src/intf/http/post/: mod.rs
backend/src/intf/http/tag/: mod.rs
backend/src/shared/: mod.rs  pagination.rs
backend/tests/: shared.rs
backend/tests/auth/: register.rs
(+49 files in other folders)
