[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".",         # 你的主程序 crate
    "migration", # 你的迁移 crate
]

[workspace.dependencies]
anyhow = "1.0.102"
axum = "0.8.9"
fred = "10.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
sea-orm = { version = "2.0.0-rc.38", features = [ "sqlx-sqlite", "with-chrono", "macros", "with-uuid", "with-json", "runtime-tokio"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["runtime-tokio", "sqlx-sqlite"] }

[dependencies]
anyhow.workspace = true
axum.workspace = true
fred = { workspace = true, features = ["i-hexpire"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
sea-orm.workspace = true
sea-orm-migration.workspace = true
nutype = { version = "0.6.2", features = ["derive_unsafe", "serde"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
bcrypt = "0.19.0"
async-trait = "0.1.89"
chrono = "0.4.44"
rand = "0.10.1"
sea-orm-cli = "1.1.20"
lettre = "0.11.21"
derive_builder = "0.20.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
josekit = "0.10.3"

[profile.dev]
opt-level = 0        # 不进行优化，编译速度最快
debug = true         # 保留调试信息
incremental = true   # 开启增量编译
