[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    ".", "application",
    "domain", "infra",
    "migration",
    "shared",
]

[workspace.dependencies]
windows-sys = "0.61.2"
socket2 = "0.6.3"
anyhow = "1.0.102"
axum = {version = "0.8.9", features = ["macros"]}
fred = {version = "10.1.0", features = ["i-hexpire", "mocks"]}
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
sea-orm = { version = "2.0.0-rc.38", features = ["sqlx-sqlite", "with-chrono", "macros", "with-uuid", "with-json", "runtime-tokio-native-tls"] }
sea-orm-migration = { version = "2.0.0-rc.38", features = ["runtime-tokio", "sqlx-sqlite"] }
nutype = { version = "0.6.2", features = ["derive_unsafe", "serde"] }
uuid = { version = "1.23.1", features = ["serde", "v7"] }
async-trait = "0.1.89"
chrono = "0.4.44"
rand = "0.10.1"
sea-orm-cli = "1.1.20"
lettre = { version="0.11.21", features = ["rustls-tls"]}
derive_builder = "0.20.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
josekit = { version = "0.10.3" }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
headers = "0.4.1"
argon2 = "0.5.3"
mockall = "0.14.0"
axum-test = "20.0.0"
shared.path = "./shared"
domain.path = "./domain"
infra.path = "./infra"
application.path = "./application"

[dependencies]
anyhow.workspace=true
axum.workspace=true
fred.workspace=true
serde.workspace=true
serde_json.workspace=true
thiserror.workspace=true
tokio.workspace=true
sea-orm.workspace=true
sea-orm-migration.workspace=true
nutype.workspace=true
uuid.workspace=true
async-trait.workspace=true
chrono.workspace=true
rand.workspace=true
sea-orm-cli.workspace=true
lettre.workspace=true
derive_builder.workspace=true
tracing.workspace=true
tracing-subscriber.workspace=true
josekit.workspace=true
axum-extra.workspace=true
headers.workspace=true
argon2.workspace=true
mockall.workspace=true
axum-test.workspace=true
shared.workspace=true
domain.workspace=true
infra.workspace=true
application.workspace=true

[profile.dev]
opt-level = 0        # 不进行优化，编译速度最快
debug = true         # 保留调试信息
incremental = true   # 开启增量编译
lto = false

[dev-dependencies]
axum-test = "20.0.0"

