[package]
name = "cqrs"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm.workspace = true
serde_json.workspace = true
serde.workspace = true
chrono.workspace = true
shared.workspace = true
domain.workspace = true
derive_builder.workspace = true
thiserror.workspace = true
infra.workspace = true