[package]
name = "infra"
version = "0.1.0"
edition = "2024"

[dependencies]
domain.workspace=true
shared.workspace=true
tokio.workspace=true
chrono.workspace=true
fred.workspace=true
sea-orm.workspace=true
async-trait.workspace=true
derive_builder.workspace=true
uuid.workspace=true
serde.workspace=true
serde_json.workspace=true
josekit.workspace=true
thiserror.workspace=true
mockall.workspace=true
lettre.workspace=true